--- a/src/components/main/section_1/styles.module.css
+++ b/src/components/main/section_1/styles.module.css
@@ -1,7 +1,7 @@
 @keyframes slideIn {
 	0% {
 		transform: translateX(100%);
-		opacity: 0;
+		opacity: .5;
 	}
 	100% {
 		transform: translateX(0);
