🎨 style: format multiple files using Prettier

--- a/src/components/main/section_1/styles.module.css
+++ b/src/components/main/section_1/styles.module.css
@@ -1,25 +1,25 @@
 @keyframes slideIn {
 	0% {
 		transform: translateX(100%);
-		opacity: .5;
+		opacity: 0.5;
 	}
 	100% {
 		transform: translateX(0);
 		opacity: 1;
 	}
 }
-  
+
 @keyframes slideOut {
 	0% {
 		transform: translateX(0);
-		opacity: .5;
+		opacity: 0.5;
 	}
 	100% {
 		transform: translateX(-100%);
 		opacity: 0;
 	}
 }
-  
+
 .slide-in {
 	animation: slideIn 1s ease-in-out forwards;
 }
