--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 html {
 	scroll-behavior: smooth;
-	background: linear-gradient(to bottom, #191A1E 0%, #000 100vh, #000 100%);
+	background: linear-gradient(to bottom, #191a1e 0%, #000 100vh, #000 100%);
 }
 
 .custom-scrollbar::-webkit-scrollbar {
@@ -12,7 +12,7 @@ html {
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-	background: #191A1E;
+	background: #191a1e;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
@@ -21,8 +21,8 @@ html {
 
 .no-select {
 	-webkit-user-drag: none;
-    -webkit-user-select: none;
+	-webkit-user-select: none;
 	-moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
